Translations updates - da es fr gl it nn
(Old svn revision: 29660)

--- a/po/es.po
+++ b/po/es.po
@@ -766,7 +766,7 @@ msgstr "Intercambiar ventanas abiertas usando un menú"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
-msgstr "Gestor de panel"
+msgstr "Administrador de panel"
 
 #~ msgid "Popup position:"
 #~ msgstr "Posición de elementos emergentes:"
@@ -860,7 +860,7 @@ msgstr "Gestor de panel"
 #~ msgstr "Fallo al lanzar 'xfce4-panel -c'"
 
 #~ msgid "Xfce 4 Panel Manager"
-#~ msgstr "Gestor de panel de Xfce 4"
+#~ msgstr "Administrador de panel de Xfce 4"
 
 #, fuzzy
 #~ msgid "Failed to register the system tray for screen %d"
