Migrate launcher category icons from 4.4 panels (bug #5067).
(Old svn revision: 29666)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+4.6.1
+=====
+- Migrate launcher category icons from 4.4 panels (bug #5067).
+
+
 4.6.0
 ======
 - Block panel autohide if the widget is grabbed (bug #4597).
@@ -7,6 +12,7 @@
 - Set the foreground color of the lcd clock (bug #4923).
 - Don't escape the command when dropping a .desktop file in the
   launcher dialog (bug #4818).
+
 
 4.5.99.1
 ========
