Fix compilation with -Wl,--as-needed (bug #5103).
(Old svn revision: 29668)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 4.6.1
 =====
 - Migrate launcher category icons from 4.4 panels (bug #5067).
+- Fix compilation with -Wl,--as-needed (bug #5103).
 
 
 4.6.0
