Updated Polish translations
(Old svn revision: 29682)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-23 Piotr Sokół <piotr.sokol@10g.pl>
+
+	* pl.po: Polish translation update
+
 2009-03-19  Masato Hashimoto <cabezon.hashimoto@gmail.com>
 
 	* ja.po: Japanese translation update (Masato Hashimoto)
@@ -6,6 +10,10 @@
 
 	* es.po: Spanish translation update (Abel Martín)
 	* gl.po: Galician translation update (Leandro Regueiro)
+
+2009-03-08 Piotr Sokół <piotr.sokol@10g.pl>
+
+	* pl.po: Polish translation update
 
 2009-03-05  Mike Massonnet <mmassonnet@xfce.org>
 
