--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-03-07 17:46+0100\n"
+"PO-Revision-Date: 2009-03-20 21:01+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
@@ -299,7 +299,7 @@ msgstr "_Przezroczystość (%):"
 
 #: ../panel/panel-dialogs.c:1471
 msgid "Make active panel _opaque"
-msgstr "Uczyń aktywny panel przezroczystym"
+msgstr "Wyłączenie _przezroczystości po zaznaczeniu"
 
 #: ../panel/panel-dialogs.c:1514
 #: ../panel/panel-dialogs.c:1550
