--- a/po/pt.po
+++ b/po/pt.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Nuno Donato <nunodonato@gmail.com.pt>, 2004.
-# Nuno Miguel <nunis@netcabo.pt>, 2007.
+# Nuno Miguel <nunis@netcabo.pt>, 2007, 2008, 2009.
 #
 msgid ""
 msgstr ""
