--- a/po/de.po
+++ b/po/de.po
@@ -4,18 +4,19 @@
 # Moritz Heiber <moe@xfce.org>, 2003-2005.
 # Fabian Nowak <timystery@arcor.de>, 2005-2008.
 # Enrico Tröger <enrico@xfce.org>, 2008.
+# Simon Schneider <simon@schneiderimtal.de>, 2009
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2008-07-18 21:27+0200\n"
-"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
-"Language-Team: German <de@li.org>\n"
+"PO-Revision-Date: 2009-02-24 22:26+0000\n"
+"Last-Translator: Simon Schneider <simon@schneiderimtal.de>\n"
+"Language-Team: German <xfce-i18n-de@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #. TRANSLATORS: This warning is printed to the commandline when
 #. an external plugin crashed
@@ -111,7 +112,7 @@ msgstr "Entwickler"
 
 #: ../panel/main.c:60
 msgid "Print version information and exit"
-msgstr ""
+msgstr "Versionsinformationen ausgeben und beenden"
 
 #: ../panel/main.c:61
 #, fuzzy
@@ -191,7 +192,7 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:653
 msgid "_Search:"
-msgstr ""
+msgstr "_Suche:"
 
 #: ../panel/panel-dialogs.c:881 ../panel/panel-dialogs.c:1117
 msgid "Normal Width"
@@ -241,12 +242,12 @@ msgstr "Position"
 #: ../panel/panel-dialogs.c:1011
 #, fuzzy
 msgid "_Fixed position"
-msgstr "Feste Position"
+msgstr "_Feste Position"
 
 #: ../panel/panel-dialogs.c:1017
 #, fuzzy
 msgid "Freely _moveable"
-msgstr "Frei bewegbar"
+msgstr "Frei _bewegbar"
 
 #: ../panel/panel-dialogs.c:1140
 msgid "Auto_hide"
@@ -286,17 +287,17 @@ msgstr "Aussehen"
 #: ../panel/panel-dialogs.c:1414
 #, fuzzy
 msgid "_Size (pixels):"
-msgstr "Größe (in Pixel)"
+msgstr "_Größe (in Pixel)"
 
 #: ../panel/panel-dialogs.c:1445
 #, fuzzy
 msgid "_Transparency (%):"
-msgstr "Durchsichtigkeit (%):"
+msgstr "_Durchsichtigkeit (%):"
 
 #: ../panel/panel-dialogs.c:1471
 #, fuzzy
 msgid "Make active panel _opaque"
-msgstr "Die aktive Leiste undurchsichtig machen"
+msgstr "Die aktive Leiste _undurchsichtig machen"
 
 #: ../panel/panel-dialogs.c:1514 ../panel/panel-dialogs.c:1550
 #: ../panel/panel-dialogs.c:1574
@@ -307,7 +308,7 @@ msgstr "Leiste %d"
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1594
 msgid "Remove the currently selected panel"
-msgstr ""
+msgstr "Die ausgewählte Leiste entfernen"
 
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1608
@@ -339,7 +340,7 @@ msgstr "Aktionsknöpfe"
 #: ../plugins/actions/actions.c:445
 #, fuzzy
 msgid "_Select action type:"
-msgstr "Aktion auswählen:"
+msgstr "Aktion _auswählen:"
 
 #: ../plugins/actions/actions.c:457
 msgid "Quit + Lock screen"
@@ -348,7 +349,7 @@ msgstr "Abmelden + Bildschirm sperren"
 #: ../plugins/actions/actions.c:468
 #, fuzzy
 msgid "_Orientation:"
-msgstr "Ausrichtung:"
+msgstr "_Ausrichtung:"
 
 #: ../plugins/clock/clock-dialog.c:357
 msgid "Custom"
@@ -418,7 +419,7 @@ msgstr "Icon-Box"
 #: ../plugins/iconbox/iconbox.c:929
 #, fuzzy
 msgid "Only show _minimized applications"
-msgstr "Nur minimierte Anwendungen anzeigen"
+msgstr "Nur _minimierte Anwendungen anzeigen"
 
 #: ../plugins/iconbox/iconbox.c:938
 #, fuzzy
@@ -428,7 +429,7 @@ msgstr "Sämtliche Anwendungen _anzeigen"
 #: ../plugins/iconbox/iconbox.c:946 ../plugins/tasklist/tasklist-dialogs.c:186
 #, fuzzy
 msgid "Use all available _space"
-msgstr "Gesamten verfügbaren Platz verwenden"
+msgstr "Gesamten verfügbaren _Platz verwenden"
 
 #. TRANSLATORS: Name of a newly created launcher
 #: ../plugins/launcher/launcher.c:705 ../plugins/launcher/launcher.c:770
@@ -549,22 +550,22 @@ msgstr "Arbeitsfläche %d"
 #: ../plugins/pager/pager.c:397
 #, fuzzy
 msgid "Number _of rows:"
-msgstr "Anzahl der Zeilen:"
+msgstr "Anzahl der _Zeilen:"
 
 #: ../plugins/pager/pager.c:401
 #, fuzzy
 msgid "Number _of columns:"
-msgstr "Anzahl der Spalten:"
+msgstr "Anzahl der _Spalten:"
 
 #: ../plugins/pager/pager.c:418
 #, fuzzy
 msgid "Switch workspaces using the mouse _wheel"
-msgstr "Arbeitsflächen mit dem Mausrad wechseln"
+msgstr "Arbeitsflächen mit dem Maus_rad wechseln"
 
 #: ../plugins/pager/pager.c:426
 #, fuzzy
 msgid "Show workspace _names"
-msgstr "Zeige Namen der Arbeitsflächen"
+msgstr "Zeige _Namen der Arbeitsflächen"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -655,17 +656,17 @@ msgstr "Taskliste"
 #: ../plugins/tasklist/tasklist-dialogs.c:172
 #, fuzzy
 msgid "_Minimum width:"
-msgstr "Minimale Breite:"
+msgstr "_Minimale Breite:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:193
 #, fuzzy
 msgid "Use _flat buttons"
-msgstr "Flache Knöpfe verwenden"
+msgstr "_Flache Knöpfe verwenden"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:199
 #, fuzzy
 msgid "Show _handle"
-msgstr "Griff anzeigen"
+msgstr "_Griff anzeigen"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:211
 msgid "Show tasks from _all workspaces"
@@ -807,11 +808,11 @@ msgstr "Symbole für Benachrichtigung anzeigen"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr ""
+msgstr "Mit Schaltflächen zwischen offenen Fenstern umschalten"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr ""
+msgstr "Mit einem Menü zwischen offenen Fenstern umschalten"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
