Updated Polish translations
(Old svn revision: 29690)

--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-03-20 21:01+0100\n"
+"PO-Revision-Date: 2009-03-27 17:40+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
@@ -253,7 +253,7 @@ msgstr "_Zmienna"
 
 #: ../panel/panel-dialogs.c:1140
 msgid "Auto_hide"
-msgstr "Automatyczne ukrywanie"
+msgstr "Automatyczne _ukrywanie"
 
 #: ../panel/panel-dialogs.c:1158
 msgid "Orientation:"
@@ -365,7 +365,7 @@ msgstr "24 _godziny"
 
 #: ../plugins/clock/clock-dialog.c:426
 msgid "Fl_ash time separators"
-msgstr "Migający separator"
+msgstr "Migający _separator"
 
 #: ../plugins/clock/clock-dialog.c:432
 msgid "Sho_w AM/PM"
@@ -442,7 +442,7 @@ msgstr "Nie udało się uruchomić „%s”."
 
 #: ../plugins/launcher/launcher-dialog.c:609
 msgid "No icon"
-msgstr "Brak ikony"
+msgstr "Brak"
 
 #: ../plugins/launcher/launcher-dialog.c:631
 msgid "Select an Application"
@@ -538,7 +538,7 @@ msgstr "Wewnątrz"
 #: ../plugins/pager/pager.c:368
 #: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Workspace Switcher"
-msgstr "Przełączanie obszarów roboczych"
+msgstr "Podgląd obszarów roboczych"
 
 #: ../plugins/pager/pager.c:397
 msgid "Number _of rows:"
@@ -609,9 +609,8 @@ msgstr "Obszar powiadomień jest już uruchomiony"
 #. reason another tray takes the ownership of the tray icons and this
 #. tray becomes unusable.
 #: ../plugins/systray/xfce-tray-plugin.c:221
-#, fuzzy
 msgid "The tray manager lost selection"
-msgstr "Menedżer obszaru powiadamiania utracił wybór"
+msgstr "Menedżer obszaru powiadamiania utracił zaznaczenie"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:281
 msgid "Are you sure you want to clear the list of known applications?"
@@ -742,7 +741,7 @@ msgstr "_Ikony na liście"
 
 #: ../plugins/windowlist/windowlist-dialog.c:235
 msgid "Show wor_kspace actions"
-msgstr "Akcje obszaru roboczego"
+msgstr "Akcje _obszarów roboczych"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
@@ -758,7 +757,7 @@ msgstr "Wyświetla ikony otwartych okien"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr "Aktywator programu z opcjonalnym menu"
+msgstr "Uruchamia programy z opcjonalnymi parametrami"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Switch between virtual desktops"
@@ -766,7 +765,7 @@ msgstr "Umożliwia przechodzenie pomiędzy obszarami roboczymi"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr "Dodaje odstęp lub separator pomiędzy elementami panelu"
+msgstr "Wyświetla odstęp lub separator pomiędzy elementami panelu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Hide all windows and show the desktop"
