Add updated translation to NEWS.
(Old svn revision: 29744)

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@
 - Fix drawing dots mode of the seperator plugin in a vertical panel (bug #5162).
 - Fix a possible crash when setting the session restart style on an
   uninitialized client session.
+- A whole bunch of translation updated (pl, es, pt, ja, es, gl, nb, pt_PT).
 
 
 4.6.0
