--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-13  Mike Massonnet <mmassonnet@xfce.org>
+
+	* it.po: Italian translation update (Christian Marchi)
+	* de.po: German translation update (Fabian Nowak)
+
 2009-03-30  Piotr Sokół <piotr.sokol@10g.pl>
 
 	* pl.po: Polish translation update
