--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+4.6.2
+=====
+- Properly set orientation of tasklist handler (bug #5222).
+
 4.6.1
 =====
 - Migrate launcher category icons from 4.4 panels (bug #5067).
